[CITE-212] Update requestMapping logic to eliminate duplication